# C_GENGO_POINTER_KANZEN_SEIHA

./: CMakeLists.txt  README.md
Chapter1/: pointer.c  try1.c  try2.c
Chapter2/: auto.c  print_address.c  stackoverflow.c  vmtest.c
tests/: array_init.c  fgets_test.c  local_variable_test.c  modify_string_constant.c  sscanf_test.c  string_constant_address_test.cpp  string_constant_adress_test.c  swap.c
