cmake_minimum_required(VERSION 3.14)
project(C_GENGO_POINTER_KANZEN_SEIHA C)

set(CMAKE_C_STANDARD 11)

add_executable(C_GENGO_POINTER_KANZEN_SEIHA main.c)
add_executable(pointer Chapter1/pointer.c)
add_executable(try1 Chapter1/try1.c)
add_executable(try2 Chapter1/try2.c)
add_executable(array_init tests/array_init.c)
add_executable(vmtest Chapter2/vmtest.c)
add_executable(sscanf_test tests/sscanf_test.c)
add_executable(fgets_test tests/fgets_test.c)
add_executable(print_address Chapter2/print_address.c)
add_executable(string_constant_adress_test tests/string_constant_adress_test.c)
add_executable(modify_string_constant tests/modify_string_constant.c)
add_executable(swap tests/swap.c)
add_executable(auto Chapter2/auto.c)
add_executable(local_variable_test tests/local_variable_test.c)
add_executable(stackoverflow Chapter2/stackoverflow.c)